# MeshProcessingLibrary

./: CMakeLists.txt  README.md
include/: IMeshExporter.h  Mesh.h  MeshOptimizer.h  OBJExporter.h  PLYExporter.h  STLExporter.h
src/: Mesh.cpp  MeshOptimizer.cpp  OBJExporter.cpp  PLYExporter.cpp  STLExporter.cpp
tests/: main.cpp
